--- a/index.html
+++ b/index.html
@@ -34,35 +34,38 @@
             <button type="button" class="btn-studio">Заказать услугу</button>
             </section>
 <!--Секция "Наши достоинства"-->
+        <div class="dig-main">
             <section class="dignity">
-                <h2>Почему именно мы?</h2>
-                <ul>
-                    <li>
-                        <h3 class="dignity-title">Внимание к деталям</h3>
-                        <p class="dignity-text">
-                            Идейные соображения, а также начало повседневной работы по формированию позиции.
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="dignity-title">Пунктуальность</h3>
-                        <p class="dignity-text">
-                            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="dignity-title">Планирование</h3>
-                        <p class="dignity-text">
-                            Равным образом консультация с широким активом в значительной степени обуславливает.
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="dignity-title">Современные технологии</h3>
-                        <p class="dignity-text">
+            <h2>Почему именно мы?</h2>
+            <ul>
+                <li>
+                    <h3 class="dignity-title">Внимание к деталям</h3>
+                    <p class="dignity-text">
+                        Идейные соображения, а также начало повседневной работы по формированию позиции.
+                    </p>
+                </li>
+                <li>
+                    <h3 class="dignity-title">Пунктуальность</h3>
+                    <p class="dignity-text">
+                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                    </p>
+                </li>
+                <li>
+                    <h3 class="dignity-title">Планирование</h3>
+                    <p class="dignity-text">
+                        Равным образом консультация с широким активом в значительной степени обуславливает.
+                    </p>
+                </li>
+                <li>
+                    <h3 class="dignity-title">Современные технологии</h3>
+                    <p class="dignity-text">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                        </p>
-                    </li>
-                </ul> 
-            </section>
+                    </p>
+                </li>
+            </ul>
+        </section>
+    </div>
+            
 <!--Секция "Чем мы занимаемся"-->
             <section class="about-work">
                 <h2 class="about-work-title">Чем мы занимаемся</h2>
@@ -75,38 +78,39 @@
 <!--Секция "Наша команда"-->
             <section class="team">
                 <h2 class="about-work-title">Наша команда</h2>
-                <ul>
-                    <li><img src="./images/igor(1).jpg" alt="Игорь Демьяненко" width="270" height="260">
+                <ul class="team-list">
+                    <li class="team-item"><img src="./images/igor(1).jpg" alt="Игорь Демьяненко" width="270" height="260" class="team-img">
                         <h3 class="team-title">Игорь Демьяненко</h3>
                         <p lang="en" class="team-text">Product Designer</p>
                     </li>
-                    <li><img src="./images/olga(1).jpg" alt="Ольга Репина" width="270" height="260">
+                    <li class="team-item"><img src="./images/olga(1).jpg" alt="Ольга Репина" width="270" height="260" class="team-img">
                         <h3 class="team-title">Ольга Репина</h3>
                         <p lang="en" class="team-text">Frontend Developer</p>
                     </li>
-                    <li><img src="./images/nikola(1).jpg" alt="Николай Тарасов" width="270" height="260">
+                    <li class="team-item"><img src="./images/nikola(1).jpg" alt="Николай Тарасов" width="270" height="260" class="team-img">
                         <h3 class="team-title">Николай Тарасов</h3>
                         <p lang="en" class="team-text">Marketing</p>
                     </li>
-                    <li><img src="./images/mishel(1).jpg" alt="Михаил Ермаков" width="270" height="260">
+                    <li class="team-item"><img src="./images/mishel(1).jpg" alt="Михаил Ермаков" width="270" height="260" class="team-img">
                         <h3 class="team-title">Михаил Ермаков</h3>
-                        <p lang="en" class="team-text">UI Designer</p>
+                        <p lang="en" class="team-text-last">UI Designer</p>
                     </li>
                 </ul>
             </section>
     </main>
 <!--Подвал сайта-->
     <footer class="ftr">
-        <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
-        <address>
-            <ul class="ftr-list">
-                <li><a href="https://goo.gl/maps/syK6WyoSJA7LZPz8A" 
-                    target="_blank"
-                    rel="noopener noreferrer" class="ftr-street">г. Киев, бульвар Леси Украинки, 26</a></li>
-                <li><a class="ftr-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="ftr-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="ftr-cont">
+            <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+            <address>
+                <ul class="ftr-list">
+                    <li><a href="https://goo.gl/maps/syK6WyoSJA7LZPz8A" target="_blank" rel="noopener noreferrer"
+                            class="ftr-street">г. Киев, бульвар Леси Украинки, 26</a></li>
+                    <li><a class="ftr-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="ftr-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>   
 </body>
 </html>
