--- a/portfolio.html
+++ b/portfolio.html
@@ -40,64 +40,66 @@
         </ul> 
         <ul class="port-list">
             <li>
-                <a href=""><img src="./images/img11.jpg" alt="Ноутбук" width="370">
+                <a href=""><img src="./images/img11.jpg" alt="Ноутбук" width="370" class="port-list-img">
                 <h2 class="port-title">Технокряк</h2>
                 <p class="port-text">Веб-сайт</p></a>    
             </li>
             <li>
-                <a href=""><img src="./images/img22.jpg" alt="Баскетболисты" width="370">
+                <a href=""><img src="./images/img22.jpg" alt="Баскетболисты" width="370" class="port-list-img">
                 <h2 class="port-title">Постер New Orlean vs Golden Star</h2>
                 <p class="port-text">Дизайн</p></a>  
             </li>
             <li>
-                <a href=""><img src="./images/img33.jpg" alt="Логотип рыбного ресторана" width="370">
+                <a href=""><img src="./images/img33.jpg" alt="Логотип рыбного ресторана" width="370" class="port-list-img">
                 <h2 class="port-title">Ресторан Seafood</h2>
                 <p class="port-text">Приложение</p></a>   
             </li>
             <li>
-                <a href=""><img src="./images/img44.jpg" alt="Наушники" width="370">
+                <a href=""><img src="./images/img44.jpg" alt="Наушники" width="370" class="port-list-img">
                 <h2 class="port-title">Проект Prime</h2>
                 <p class="port-text">Маркетинг</p></a>  
             </li>
             <li>
-                <a href=""><img src="./images/img55.jpg" alt="Две коробки" width="370">
+                <a href=""><img src="./images/img55.jpg" alt="Две коробки" width="370" class="port-list-img">
                 <h2 class="port-title">Проект Boxes</h2>
                 <p class="port-text">Приложение</p></a>
             </li>
             <li>
-                <a href=""><img src="./images/img66.jpg" alt="Монитор" width="370">
+                <a href=""><img src="./images/img66.jpg" alt="Монитор" width="370" class="port-list-img">
                 <h2 class="port-title">Inspiration has no Borders</h2>
                 <p class="port-text">Веб-сайт</p></a>  
             </li>
             <li>
-                <a href=""><img src="./images/img77.jpg" alt="Журнал" width="370">
+                <a href=""><img src="./images/img77.jpg" alt="Журнал" width="370" class="port-list-img">
                 <h2 class="port-title">Издание Limited Edition</h2>
                 <p class="port-text">Дизайн</p></a>    
             </li>
             <li>
-                <a href=""><img src="./images/img88.jpg" alt="Этикетка" width="370">
+                <a href=""><img src="./images/img88.jpg" alt="Этикетка" width="370" class="port-list-img">
                 <h2 class="port-title">Проект LAB</h2>
                 <p class="port-text">Маркетинг</p></a>    
             </li>
             <li>
-                <a href=""><img src="./images/img99.jpg" alt="Набор текста" width="370">
+                <a href=""><img src="./images/img99.jpg" alt="Набор текста" width="370" class="port-list-img">
                 <h2 class="port-title">Growing Business</h2>
-                <p class="port-text">Приложение</p></a>   
+                <p class="port-text-last">Приложение</p></a>   
             </li>
         </ul>
         </section>
     </main>
     <!--Подвал сайта-->
     <footer class="ftr">
-        <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
-        <address>
-            <ul class="ftr-list">
-                <li><a href="https://goo.gl/maps/syK6WyoSJA7LZPz8A" target="_blank" rel="noopener noreferrer"
-                        class="ftr-street">г. Киев, бульвар Леси Украинки, 26</a></li>
-                <li><a class="ftr-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="ftr-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="ftr-cont">
+            <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+            <address>
+                <ul class="ftr-list">
+                    <li><a href="https://goo.gl/maps/syK6WyoSJA7LZPz8A" target="_blank" rel="noopener noreferrer"
+                            class="ftr-street">г. Киев, бульвар Леси Украинки, 26</a></li>
+                    <li><a class="ftr-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="ftr-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
