--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!--Шапка сайта-->
-    <header class="top">
+    <header class="top conteiner">
         <nav>
             <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
             <ul class="list">
@@ -29,12 +29,12 @@
     </header>
     <main>
 <!--Секция HERO-->
-            <section class="hero">
+            <section class="hero section">
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="btn-studio">Заказать услугу</button>
             </section>
 <!--Секция "Наши достоинства"-->
-        <div class="dig-main">
+        <div class="dig-main conteiner section">
             <section class="dignity">
             <h2>Почему именно мы?</h2>
             <ul>
@@ -67,7 +67,7 @@
     </div>
             
 <!--Секция "Чем мы занимаемся"-->
-            <section class="about-work">
+            <section class="about-work conteiner section ">
                 <h2 class="about-work-title">Чем мы занимаемся</h2>
                 <ul>
                     <li><img src="./images/img1(1).jpg" alt="Создание сайтов" width="370" height="294"></li>
@@ -76,7 +76,7 @@
                 </ul>
             </section>
 <!--Секция "Наша команда"-->
-            <section class="team">
+            <section class="team conteiner section">
                 <h2 class="about-work-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="team-item"><img src="./images/igor(1).jpg" alt="Игорь Демьяненко" width="270" height="260" class="team-img">
