--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 </head>
 <body>
         <!--Шапка сайта-->
-        <header class="top">
+        <header class="top conteiner">
             <nav>
                 <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
                 <ul class="list">
@@ -29,57 +29,57 @@
             </ul>
         </header>
     <main>
-        <section class="port-our-work">
+        <section class="port-our-work conteiner section">
             <h1>Наши роботы</h1>
         <ul class="port-btn-list">
-            <li><button type="button" class="port-btn">Все</button></li>
-            <li><button type="button" class="port-btn">Веб-сайты</button></li>
-            <li><button type="button" class="port-btn">Приложения</button></li>
-            <li><button type="button" class="port-btn">Дизайн</button></li>
-            <li><button type="button" class="port-btn">Маркетинг</button></li>
+            <li class="item"><button type="button" class="port-btn">Все</button></li>
+            <li class="item"><button type="button" class="port-btn">Веб-сайты</button></li>
+            <li class="item"><button type="button" class="port-btn">Приложения</button></li>
+            <li class="item"><button type="button" class="port-btn">Дизайн</button></li>
+            <li class="item"><button type="button" class="port-btn">Маркетинг</button></li>
         </ul> 
         <ul class="port-list">
-            <li>
+            <li class="port-item">
                 <a href=""><img src="./images/img11.jpg" alt="Ноутбук" width="370" class="port-list-img">
                 <h2 class="port-title">Технокряк</h2>
                 <p class="port-text">Веб-сайт</p></a>    
             </li>
-            <li>
+            <li class="port-item">
                 <a href=""><img src="./images/img22.jpg" alt="Баскетболисты" width="370" class="port-list-img">
                 <h2 class="port-title">Постер New Orlean vs Golden Star</h2>
                 <p class="port-text">Дизайн</p></a>  
             </li>
-            <li>
+            <li class="port-item">
                 <a href=""><img src="./images/img33.jpg" alt="Логотип рыбного ресторана" width="370" class="port-list-img">
                 <h2 class="port-title">Ресторан Seafood</h2>
                 <p class="port-text">Приложение</p></a>   
             </li>
-            <li>
+            <li class="port-item">
                 <a href=""><img src="./images/img44.jpg" alt="Наушники" width="370" class="port-list-img">
                 <h2 class="port-title">Проект Prime</h2>
                 <p class="port-text">Маркетинг</p></a>  
             </li>
-            <li>
+            <li class="port-item">
                 <a href=""><img src="./images/img55.jpg" alt="Две коробки" width="370" class="port-list-img">
                 <h2 class="port-title">Проект Boxes</h2>
                 <p class="port-text">Приложение</p></a>
             </li>
-            <li>
+            <li class="port-item">
                 <a href=""><img src="./images/img66.jpg" alt="Монитор" width="370" class="port-list-img">
                 <h2 class="port-title">Inspiration has no Borders</h2>
                 <p class="port-text">Веб-сайт</p></a>  
             </li>
-            <li>
+            <li class="port-item">
                 <a href=""><img src="./images/img77.jpg" alt="Журнал" width="370" class="port-list-img">
                 <h2 class="port-title">Издание Limited Edition</h2>
                 <p class="port-text">Дизайн</p></a>    
             </li>
-            <li>
+            <li class="port-item">
                 <a href=""><img src="./images/img88.jpg" alt="Этикетка" width="370" class="port-list-img">
                 <h2 class="port-title">Проект LAB</h2>
                 <p class="port-text">Маркетинг</p></a>    
             </li>
-            <li>
+            <li class="port-item">
                 <a href=""><img src="./images/img99.jpg" alt="Набор текста" width="370" class="port-list-img">
                 <h2 class="port-title">Growing Business</h2>
                 <p class="port-text-last">Приложение</p></a>   
