--- a/portfolio.html
+++ b/portfolio.html
@@ -15,17 +15,17 @@
 <body>
         <!--Шапка сайта-->
         <header class="top conteiner">
-            <nav>
-                <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+            <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+            <nav class="nav">
                 <ul class="list">
-                    <li><a href="./index.html">Студия</a></li>
-                    <li><a href="/">Портфолио</a></li>
-                    <li><a href="/Contacts">Контакты</a></li>
+                    <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
+                    <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+                    <li class="nav-item"><a href="/Contacts" class="nav-link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="contacts">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="cont-item"><a href="mailto:info@devstudio.com" class="cont-link">info@devstudio.com</a></li>
+                <li class="cont-item"><a href="tel:+380961111111" class="cont-link">+38 096 111 11 11</a></li>
             </ul>
         </header>
     <main>
