--- a/index.html
+++ b/index.html
@@ -14,49 +14,49 @@
 <body>
 <!--Шапка сайта-->
     <header class="top conteiner">
-        <nav>
-            <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+        <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+        <nav class="nav">
             <ul class="list">
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="/Contacts">Контакты</a></li>
+                <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
+                <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+                <li class="nav-item"><a href="/Contacts" class="nav-link">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contacts">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="cont-item"><a href="mailto:info@devstudio.com" class="cont-link">info@devstudio.com</a></li>
+            <li class="cont-item"><a href="tel:+380961111111" class="cont-link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
 <!--Секция HERO-->
             <section class="hero section">
-            <h1>Эффективные решения для вашего бизнеса</h1>
+            <h1>Эффективные решения<br> для вашего бизнеса</h1>
             <button type="button" class="btn-studio">Заказать услугу</button>
             </section>
 <!--Секция "Наши достоинства"-->
         <div class="dig-main conteiner section">
             <section class="dignity">
             <h2>Почему именно мы?</h2>
-            <ul>
-                <li>
+            <ul class="dignity-list">
+                <li class="dignity-item">
                     <h3 class="dignity-title">Внимание к деталям</h3>
                     <p class="dignity-text">
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
-                <li>
+                <li class="dignity-item">
                     <h3 class="dignity-title">Пунктуальность</h3>
                     <p class="dignity-text">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
-                <li>
+                <li class="dignity-item">
                     <h3 class="dignity-title">Планирование</h3>
                     <p class="dignity-text">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
-                <li>
+                <li class="dignity-item">
                     <h3 class="dignity-title">Современные технологии</h3>
                     <p class="dignity-text">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -69,10 +69,10 @@
 <!--Секция "Чем мы занимаемся"-->
             <section class="about-work conteiner section ">
                 <h2 class="about-work-title">Чем мы занимаемся</h2>
-                <ul>
-                    <li><img src="./images/img1(1).jpg" alt="Создание сайтов" width="370" height="294"></li>
-                    <li><img src="./images/img2(1).jpg" alt="Создание мобильных приложений" width="370" height="294"></li>
-                    <li><img src="./images/img3(1).jpg" alt="Дизайн" width="370" height="294"></li>
+                <ul class="abou-w-list">
+                    <li class="a-w-item"><img src="./images/img1(1).jpg" alt="Создание сайтов" width="370" height="294"></li>
+                    <li class="a-w-item"><img src="./images/img2(1).jpg" alt="Создание мобильных приложений" width="370" height="294"></li>
+                    <li class="a-w-item"><img src="./images/img3(1).jpg" alt="Дизайн" width="370" height="294"></li>
                 </ul>
             </section>
 <!--Секция "Наша команда"-->
@@ -93,7 +93,7 @@
                     </li>
                     <li class="team-item"><img src="./images/mishel(1).jpg" alt="Михаил Ермаков" width="270" height="260" class="team-img">
                         <h3 class="team-title">Михаил Ермаков</h3>
-                        <p lang="en" class="team-text-last">UI Designer</p>
+                        <p lang="en" class="team-text">UI Designer</p>
                     </li>
                 </ul>
             </section>
