--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     </header>
     <main>
 <!--Секция HERO-->
-            <section class="hero section">
+            <section class="hero conteiner section">
             <h1>Эффективные решения<br> для вашего бизнеса</h1>
             <button type="button" class="btn-studio">Заказать услугу</button>
             </section>
 <!--Секция "Наши достоинства"-->
-        <div class="dig-main conteiner section">
-            <section class="dignity">
+        <div class="dig-main">
+            <section class="dignity conteiner section">
             <h2>Почему именно мы?</h2>
             <ul class="dignity-list">
                 <li class="dignity-item">
@@ -99,7 +99,7 @@
             </section>
     </main>
 <!--Подвал сайта-->
-    <footer class="ftr">
+    <footer class="ftr conteiner">
         <div class="ftr-cont">
             <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
             <address>
