--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <main>
         <section class="port-our-work conteiner section">
             <h1>Наши роботы</h1>
-        <ul class="port-btn-list">
+        <ul class="port-btn-list conteiner">
             <li class="item"><button type="button" class="port-btn">Все</button></li>
             <li class="item"><button type="button" class="port-btn">Веб-сайты</button></li>
             <li class="item"><button type="button" class="port-btn">Приложения</button></li>
@@ -82,13 +82,13 @@
             <li class="port-item">
                 <a href=""><img src="./images/img99.jpg" alt="Набор текста" width="370" class="port-list-img">
                 <h2 class="port-title">Growing Business</h2>
-                <p class="port-text-last">Приложение</p></a>   
+                <p class="port-text">Приложение</p></a>   
             </li>
         </ul>
         </section>
     </main>
     <!--Подвал сайта-->
-    <footer class="ftr">
+    <footer class="ftr conteiner">
         <div class="ftr-cont">
             <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
             <address>
