--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </head>
 <body>
 <!--Шапка сайта-->
-    <header class="conteiner top">
-        <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+    <header class="top">
+        <div class="conteiner header-wrap">
         <nav class="nav">
+            <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
             <ul class="list">
                 <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
                 <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
@@ -26,6 +27,7 @@
             <li class="cont-item"><a href="mailto:info@devstudio.com" class="cont-link">info@devstudio.com</a></li>
             <li class="cont-item"><a href="tel:+380961111111" class="cont-link">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
     <main>
 <!--Секция HERO-->
@@ -118,10 +120,10 @@
             <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
             <address>
                 <ul class="ftr-list">
-                    <li><a href="https://goo.gl/maps/syK6WyoSJA7LZPz8A" target="_blank" rel="noopener noreferrer"
+                    <li class="ftr-item"><a href="https://goo.gl/maps/syK6WyoSJA7LZPz8A" target="_blank" rel="noopener noreferrer"
                             class="ftr-street">г. Киев, бульвар Леси Украинки, 26</a></li>
-                    <li><a class="ftr-contacts ftr-sc" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="ftr-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="ftr-item"><a class="ftr-contacts ftr-sc" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="ftr-item"><a class="ftr-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
