--- a/portfolio.html
+++ b/portfolio.html
@@ -14,19 +14,21 @@
 </head>
 <body>
         <!--Шапка сайта-->
-        <header class="top conteiner">
-            <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
-            <nav class="nav">
-                <ul class="list">
-                    <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
-                    <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
-                    <li class="nav-item"><a href="/Contacts" class="nav-link">Контакты</a></li>
+        <header class="top">
+            <div class="conteiner header-wrap">
+                <nav class="nav">
+                    <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+                    <ul class="list">
+                        <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
+                        <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+                        <li class="nav-item"><a href="/Contacts" class="nav-link">Контакты</a></li>
+                    </ul>
+                </nav>
+                <ul class="contacts">
+                    <li class="cont-item"><a href="mailto:info@devstudio.com" class="cont-link">info@devstudio.com</a></li>
+                    <li class="cont-item"><a href="tel:+380961111111" class="cont-link">+38 096 111 11 11</a></li>
                 </ul>
-            </nav>
-            <ul class="contacts">
-                <li class="cont-item"><a href="mailto:info@devstudio.com" class="cont-link">info@devstudio.com</a></li>
-                <li class="cont-item"><a href="tel:+380961111111" class="cont-link">+38 096 111 11 11</a></li>
-            </ul>
+            </div>
         </header>
     <main>
         <section class="port-our-work section">
@@ -113,10 +115,11 @@
             <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
             <address>
                 <ul class="ftr-list">
-                    <li><a href="https://goo.gl/maps/syK6WyoSJA7LZPz8A" target="_blank" rel="noopener noreferrer"
-                            class="ftr-street">г. Киев, бульвар Леси Украинки, 26</a></li>
-                    <li><a class="ftr-contacts ftr-sc" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="ftr-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="ftr-item"><a href="https://goo.gl/maps/syK6WyoSJA7LZPz8A" target="_blank"
+                            rel="noopener noreferrer" class="ftr-street">г. Киев, бульвар Леси Украинки, 26</a></li>
+                    <li class="ftr-item"><a class="ftr-contacts ftr-sc"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="ftr-item"><a class="ftr-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
